<resources>
    <string name="app_name">MedicineNotification</string>

    <string name="email">Id</string>
    <string name="password">Password</string>
    <string name="login_en">OK</string>
    <string name="find_user_password">비밀번호 찾기</string>
    <string name="find_text">검색어를 입력하세요</string>
    <string name="find_password">비밀번호를 확인할 아이디를 입력해주세요</string>
    <string name="sign_up">회원가입</string>
    <string name="login_kr">MedicineNotification</string>
    <string name="password_check">Password Check</string>
    <string name="password_notify">6자 이상 입력해주세요.</string>
</resources>