<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="24dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:fontFamily="@font/cafe"
            android:gravity="center"
            android:text="@string/sign_up"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/cafe"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/ed_email"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/background_button"
            android:fontFamily="@font/cafe"
            android:gravity="center"
            android:imeOptions="actionDone"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/cafe"
                android:text="@string/password"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />


        </LinearLayout>


        <EditText
            android:id="@+id/ed_password"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/background_button"
            android:fontFamily="@font/cafe"
            android:gravity="center"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textSize="15sp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/cafe"
            android:text="@string/password_check"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/edPasswordCheck"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/background_button"
            android:fontFamily="@font/cafe"
            android:gravity="center"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:textColor="@color/black"
            android:textSize="15sp" />



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="회원 유형 선택"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:id="@+id/rg_type"
            android:orientation="vertical">


            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rb_patient"
                android:text="환자"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rb_guardian"
                android:text="보호자"/>
        </RadioGroup>

        <TextView
            android:id="@+id/tv_create"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginBottom="50dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/imgae_button_login"
            android:fontFamily="@font/cafe"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/login_en"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold" />


    </LinearLayout>


</LinearLayout>